# albert-tripmeal-cloud

./: docker-compose.yml  tripmeal.yml
db/: Dockerfile
web/: Dockerfile  app.py  dbconnect.py  pyproject.toml
