[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mintyfrankie", email = "77310871+mintyfrankie@users.noreply.github.com" },
]
dependencies = [
    "Flask>=2.0.0",
    "Flask-WTF>=1.0.0",
    "Jinja2>=3.0.0",
    "MarkupSafe>=2.0.0",
    "WTForms>=3.0.0",
    "Werkzeug>=2.0.0",
    "click>=8.0.0",
    "cryptography",
    "gunicorn>=20.0.0",
    "itsdangerous>=2.0.0",
    "passlib>=1.7.4",
    "pymysql",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
